# clever-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  service.yaml
clever/: __main__.py  router.py
clever/clients/: minio_client.py
clever/loader/: image_loader.py  pdf_loader.py
clever/models/: course.py  file.py  flashcards.py  generate_flashcards_body.py  question.py
clever/repositories/: course_repository.py  file_repository.py  flashcard_repository.py  question_repository.py
clever/routers/: ai_router.py  course_router.py  file_router.py  flashcards_router.py  question_router.py
clever/services/: course_service.py  embeddings_service.py  file_service.py  flashcard_service.py  question_service.py  tts_service.py  visual_qa_service.py
clever/utils/: database.py  formatter.py  llama_indices.py  ocr.py  query_engine.py  service_context.py  trulens.py  vector_store.py
docker-compose/: docker-compose.dev.yaml
study_buddy/: __main__.py  router.py
study_buddy/clients/: minio_client.py
study_buddy/loader/: gcs_loader.py  image_loader.py
study_buddy/models/: ask_body.py  course.py  file.py  flashcards.py
study_buddy/repositories/: course_repository.py  file_repository.py  flashcard_repository.py  question_repository.py
study_buddy/routers/: ai_router.py  course_router.py  file_router.py  flashcards_router.py  health_router.py  question_router.py
study_buddy/services/: course_service.py  embeddings_service.py  file_service.py  flashcard_service.py  question_service.py  tts_service.py  visual_qa_service.py
study_buddy/utils/: cloud_vision.py  database.py  formatter.py  llama_indices.py  llm.py  models.py  ocr.py  query_engine.py  service_context.py  trulens.py  (+1 more)
trulens_dashboard/: Dockerfile  app.py
(+2 files in other folders)
